<resources>
    <string name="app_name">Running</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_goal">Goal</string>
    <string name="title_activity_workout">Workout</string>
    <string name="title_activity_food">food</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forget_pass">Forget Password</string>
    <string name="login_title">Login</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="login_error_message">Username or Password is incorrect.</string>
    <string name="E_mail">E-mail</string>
    <string name="title_home">Home</string>
    <string name="name">Name</string>

    <string name="re_password">Re-Password</string>
    <string name="age">age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>



    <string-array name="array_actlevel">
        <item>Sedentary</item>
        <item>Light Active</item>
        <item>Active</item>
        <item>Very Active</item>


    </string-array>

    <string-array name="array_goal">
        <item>Lose 1 Kg per week</item>
        <item>Lose 0.5 Kg per week</item>
        <item>Maintain my current weight</item>
        <item>Gain 0.25 Kg per week</item>
        <item>Gain 0.5 Kg per week</item>

    </string-array>







    <string-array name="foods">
        <item>หมูกระเทียม</item>
        <item>กะเพราปลาหมึก</item>
        <item>กะเพราหมูสับไข่ดาว</item>
        <item>ข้าวไข่เจียว</item>
        <item>ผัดไท</item>
    </string-array>

    <integer-array name="cals">
        <item>650</item>
        <item>800</item>
        <item>850</item>
        <item>700</item>
        <item>750</item>
    </integer-array>
    <string name="title_activity_calendar">calendar</string>

</resources>
