<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3399ff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/name"
                android:hint="@string/name"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/Email"
                android:inputType="textEmailAddress"
                android:hint="@string/E_mail"
                android:layout_below="@+id/name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:id="@+id/Password"
                    android:inputType="textPassword"
                    android:hint="@string/password_title"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:id="@+id/rePassword"
                    android:inputType="textPassword"
                    android:hint="@string/re_password"
                    android:layout_below="@+id/Password"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:id="@+id/age"
                    android:hint="@string/age"
                    android:layout_below="@+id/rePassword"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:id="@+id/Height"
                    android:hint="@string/height"
                    android:layout_below="@+id/age"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:id="@+id/Weight"
                    android:hint="@string/weight"
                    android:layout_below="@+id/weight"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit"
            android:background="#ff3eaff9"
            android:textColor="#111111"
            android:text="Submit"
            android:textSize="16sp"
            />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true">
                        <Button
                            android:layout_width="184dp"
                            android:layout_height="wrap_content"
                            android:text="  Reset"
                            android:id="@+id/button8"
                            android:background="#ff3eaff9"
                            android:textColor="#111111"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />

                        <Button
                            android:layout_width="177dp"
                            android:layout_height="wrap_content"
                            android:text="  Login"
                            android:id="@+id/button7"
                            android:background="#ff3eaff9"
                            android:textColor="#111111"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            />
                    </LinearLayout>


    </LinearLayout>

</RelativeLayout>
